README.md added

--- a/CI - Lab/CI - Lab02/lab2-nim.ipynb
+++ b/CI - Lab/CI - Lab02/lab2-nim.ipynb
@@ -135,39 +135,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Best solution: None (with σ=0.001 from actor Agent 49)\n",
-      "INFO:root:Weights: [4.50850431e-01 4.02868384e-02 2.62828854e-01 9.76711783e-01\n",
-      " 1.87792636e-01 1.43109162e-01 1.38092729e-03 5.48706786e-01\n",
-      " 4.40059418e-04 3.28707504e-01 8.86154960e-01 2.44875829e-01\n",
-      " 4.77560379e-02 3.84429328e-01 9.20520357e-01 7.04951657e-01\n",
-      " 3.78454454e-01 8.10321937e-01 1.50171490e-01 4.67642842e-01\n",
-      " 1.05179771e-01 9.16253188e-02] (with σ=0.001)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error, you're acceding a None fitness value\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'fitness2' from 'pop_funct' (d:\\Desktop\\II ANNO LM\\Computational Intelligence\\CI - Exercises\\CI - Computational_intelligence_github\\Computational-Intelligence\\CI - Lab\\CI - Lab02\\pop_funct.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32md:\\Desktop\\II ANNO LM\\Computational Intelligence\\CI - Exercises\\CI - Computational_intelligence_github\\Computational-Intelligence\\CI - Lab\\CI - Lab02\\lab2-nim.ipynb Cella 10\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Desktop/II%20ANNO%20LM/Computational%20Intelligence/CI%20-%20Exercises/CI%20-%20Computational_intelligence_github/Computational-Intelligence/CI%20-%20Lab/CI%20-%20Lab02/lab2-nim.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m####   JUST USE MAIN.PY TO TRAIN OR TEST1.PY/TEST2.PY TO START A SIMULATION WITH ALREADY TRAINED CONFIGURATIONS   ####\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Desktop/II%20ANNO%20LM/Computational%20Intelligence/CI%20-%20Exercises/CI%20-%20Computational_intelligence_github/Computational-Intelligence/CI%20-%20Lab/CI%20-%20Lab02/lab2-nim.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnim\u001b[39;00m \u001b[39mimport\u001b[39;00m Nim,Nimply\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Desktop/II%20ANNO%20LM/Computational%20Intelligence/CI%20-%20Exercises/CI%20-%20Computational_intelligence_github/Computational-Intelligence/CI%20-%20Lab/CI%20-%20Lab02/lab2-nim.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpop_funct\u001b[39;00m \u001b[39mimport\u001b[39;00m fitness2, mutate, select_parents\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Desktop/II%20ANNO%20LM/Computational%20Intelligence/CI%20-%20Exercises/CI%20-%20Computational_intelligence_github/Computational-Intelligence/CI%20-%20Lab/CI%20-%20Lab02/lab2-nim.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnim_agents\u001b[39;00m \u001b[39mimport\u001b[39;00m pure_random,gabriele,optimal,AgentsVec,NimAgent\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Desktop/II%20ANNO%20LM/Computational%20Intelligence/CI%20-%20Exercises/CI%20-%20Computational_intelligence_github/Computational-Intelligence/CI%20-%20Lab/CI%20-%20Lab02/lab2-nim.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrandom\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'fitness2' from 'pop_funct' (d:\\Desktop\\II ANNO LM\\Computational Intelligence\\CI - Exercises\\CI - Computational_intelligence_github\\Computational-Intelligence\\CI - Lab\\CI - Lab02\\pop_funct.py)"
      ]
     }
    ],
    "source": [
-    "from nim import Nim,Nimply,play_game\n",
-    "from pop_funct import select_parents,mutate,fitness\n",
+    "\n",
+    "####   JUST USE MAIN.PY TO TRAIN OR TEST1.PY/TEST2.PY TO START A SIMULATION WITH ALREADY TRAINED CONFIGURATIONS   ####\n",
+    "\n",
+    "from nim import Nim,Nimply\n",
+    "from pop_funct import fitness2, mutate, select_parents\n",
     "from nim_agents import pure_random,gabriele,optimal,AgentsVec,NimAgent\n",
     "import random\n",
     "import numpy as np\n",
     "import logging\n",
     "from matplotlib import pyplot as plt\n",
-    "from matplotlib import cm\n",
     "from copy import deepcopy\n",
     "import rules as rs\n",
     "\n",
@@ -175,8 +168,8 @@
     "def main():\n",
     "    λ = 200\n",
     "    σ = 0.001\n",
-    "    μ = 50 \n",
-    "    STEPS = 100\n",
+    "    μ = 50\n",
+    "    STEPS = 10\n",
     "    # Specifica la lista di regole.\n",
     "\n",
     "    tr_rules = [\n",
@@ -191,30 +184,23 @@
     "    tr_weights = [-158.37343213 ,-177.89434133,   15.06265569   ,83.63611385  ,-87.40610713,\n",
     "   49.67343213] \n",
     "\n",
-    "    # qui ancora devi mettere le regole. trovi un elenco su rules.py\n",
+    "  \n",
     "    rules = [\n",
     "        rs.rule_is_even,\n",
-    "        rs.rule_is_even_2,\n",
-    "        rs.rule_is_even_3,\n",
-    "        rs.rule_is_even_4,\n",
-    "        rs.rule_is_even_5,\n",
+    "        rs.rule_is_even_max,\n",
+    "        rs.rule_is_even_middle,\n",
     "        rs.rule_is_odd,\n",
-    "        rs.rule_is_odd_2,\n",
-    "        rs.rule_is_odd_3,\n",
-    "        rs.rule_is_odd_4,\n",
-    "        rs.rule_is_odd_5,\n",
+    "        rs.rule_is_odd_max,\n",
+    "        rs.rule_is_odd_middle,\n",
     "        rs.rule_is_perfect_square,\n",
-    "        rs.rule_is_perfect_square_2,\n",
-    "        rs.rule_is_perfect_square_3,\n",
-    "        rs.rule_is_perfect_square_4,\n",
-    "        rs.rule_is_perfect_square_5,\n",
+    "        rs.rule_is_perfect_square_max,\n",
+    "        rs.rule_is_perfect_square_middle,\n",
     "        rs.rule_is_prime,\n",
-    "        rs.rule_is_prime_2,\n",
-    "        rs.rule_is_prime_3,\n",
-    "        rs.rule_is_prime_4,\n",
-    "        rs.rule_is_prime_5,\n",
-    "        rs.rule_is_multiple_of_3_and_5,\n",
-    "        rs.rule_is_multiple_of_golden_ratio\n",
+    "        rs.rule_is_prime_max,\n",
+    "        rs.rule_is_prime_middle,\n",
+    "        rs.rule_highest_ratio,\n",
+    "        rs.rule_highest_remaining_matches,\n",
+    "        rs.rule_lowest_remaining_matches,\n",
     "    ]\n",
     "\n",
     "\n",
@@ -226,77 +212,57 @@
     "\n",
     "\n",
     "    player2 =  NimAgent(f\"Agent 1\",np.array(tr_rules), tr_weights,σ)\n",
-    "    agents = AgentsVec([pure_random,optimal])\n",
-    "    opposer = agents.first()\n",
+    "    agents = [pure_random,optimal,pure_random,optimal]\n",
     "\n",
     "    best_fitness = None\n",
     "    history = list()\n",
     "\n",
     "    # Esegui l'algoritmo evolutivo per 1_000_000 // λ generazioni.\n",
-    "    for step in range(STEPS // λ):\n",
+    "    for step in range(STEPS):\n",
     "        fit_vec = []\n",
     "\n",
-    "        #after each 1/3 of the \n",
-    "        if step % ((STEPS // λ) // 3) == 0:\n",
-    "            opposer = agents.next()\n",
-    "\n",
     "        # Seleziona gli agenti a caso e creane una copia (figli)\n",
+    "        print(f\"Generazione numero: {step}\")\n",
+    "        print(f\"Popolazione: {[p.getName() for p in population]}\")\n",
     "        offspring = select_parents(population,μ,λ)\n",
     "\n",
-    "        # Applica la mutazione agli agenti copiati.\n",
-    "        mutate(offspring)\n",
-    "        # print(f\"Offspring dopo mutate: {offspring}\")\n",
-    "\n",
+    "        # Applica la mutazione.\n",
+    "        σ = mutate(offspring,σ)\n",
+    "        \n",
     "        for player in offspring:\n",
-    "            #make the order of player randomic\n",
-    "            my_strategy = player.choose_move\n",
-    "            strategy = [my_strategy,opposer]\n",
-    "            random.shuffle(strategy)\n",
-    "            index = strategy.index(my_strategy)      #take the index of our ES actor\n",
-    "            strategy = tuple(strategy)\n",
     "\n",
-    "            #from the match return some parameters as result\n",
-    "            params = play_game(strategy)\n",
-    "            fit = fitness(index,params)\n",
+    "\n",
+    "            fit = fitness2(player,agents)\n",
     "            #save the fitness inside the player class\n",
     "            player.setFitness(fit)\n",
     "            #and in a fitness vector\n",
     "            fit_vec.append(fit)\n",
     "\n",
-    "        #order the offspring vector according to their fitness value    \n",
-    "        #print(f\"Fit vec: {fit_vec}\")\n",
-    "        \n",
-    "        fit_vec_np = np.array(fit_vec, dtype=[('bool', bool), ('num', int)])\n",
-    "        indices = np.argsort(fit_vec_np, order=['bool', 'num'])\n",
+    "        fit_vec_np = np.array(fit_vec)\n",
+    "        indices = np.argsort(fit_vec_np)\n",
     "\n",
     "        offspring = offspring[indices]\n",
     "\n",
-    "            # save best (just for the plot)\n",
+    "        # save best (just for the plot)\n",
     "        if best_fitness is None or best_fitness < max(fit_vec):\n",
     "            best_fitness = max(fit_vec)\n",
-    "            \n",
-    "            # if best_fitness[0] == True:\n",
-    "            #     best_fitness2 = best_fitness[1] * 10\n",
-    "            # else:\n",
-    "            #     best_fitness2 = best_fitness[1] \n",
-    "            \n",
-    "            #history.append((step, best_fitness2))\n",
+    "            history.append((step, best_fitness))\n",
     "\n",
     "        population = deepcopy(offspring[-μ:])\n",
     "\n",
-    "        #print(f\"Agente con il fitness più alto: {population[-1].getName()}\")\n",
+    "        print(f\"Agente con il fitness più alto: {population[-1].getName()} con fitness: {population[-1].getFitness()}\")\n",
     "\n",
-    "    logging.info(\n",
+    "    print(\n",
     "        f\"Best solution: {population[-1].getFitness()} (with σ={population[-1].σ:0.3g} from actor {population[-1].getName()})\"\n",
     "    )\n",
     "\n",
-    "    logging.info(\n",
-    "        f\"Weights: {population[-1].weights} (with σ={population[-1].σ:0.3g})\"\n",
+    "    print(\n",
+    "        f\"Weights: {list(population[-1].weights)} (with σ={population[-1].σ:0.3g})\"\n",
     "    )\n",
     "\n",
-    "   # history = np.array(history)\n",
-    "    #plt.figure(figsize=(14, 4))\n",
-    "    #plt.plot(history[:, 0], history[:, 1], marker=\".\")\n",
+    "    history = np.array(history)\n",
+    "    plt.figure(figsize=(14, 4))\n",
+    "    plt.plot(history[:, 0], history[:, 1], marker=\".\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "  main()"
