Lab10 folder added

--- a/CI - Lectures_notes/lab10-gx.ipynb
+++ b/CI - Lectures_notes/lab10-gx.ipynb
@@ -16,6 +16,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's a simplified version of the Monte Carlo Tree Search (MCTS) algorithm for Tic-Tac-Toe\n",
+    "The basic idea of MCTS is to repeatedly simulate games, selecting moves based on a probability distribution that is updated based on the results of the simulations\n",
+    "This process allows the algorithm to learn about the value of different positions in the game, and to make better decisions over time.\n",
+    "The algorithm uses a two-level tree, with a root node for each possible board position. The algorithm then repeatedly simulates games from each root node, selecting moves based on a random probability distribution. After each simulation, the algorithm updates the probability distribution for each node based on the result of the simulation. This process is repeated until the time limit is reached, or until a game is completed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -63,6 +73,10 @@
     "def win(elements):\n",
     "    \"\"\"Checks is elements is winning\"\"\"\n",
     "    return any(sum(c) == 15 for c in combinations(elements, 3))\n",
+    "\n",
+    "'''A reward is calculated for each state of each game. \n",
+    "The reward is calculated as the evaluation of the final state of the game. \n",
+    "In this case, the evaluation is done by the state_value() function, which returns a value between -1 and 1.'''\n",
     "\n",
     "def state_value(pos: State):\n",
     "    \"\"\"Evaluate state: +1 first player wins\"\"\"\n",
@@ -127,6 +141,12 @@
     "value_dictionary = defaultdict(float)\n",
     "hit_state = defaultdict(int)\n",
     "epsilon = 0.001\n",
+    "\n",
+    "'''the line final_reward = state_value(trajectory[-1]) calculates the reward of the final move of the game. \n",
+    "The line value_dictionary[hashable_state] = value_dictionary[ hashable_state ] + epsilon * (final_reward - value_dictionary[hashable_state]) \n",
+    "updates the probability distribution for the current node based on the reward of the final move.'''\n",
+    "\n",
+    "'''The epsilon constant is being used to control the rate of learning. A smaller value of epsilon will result in slower learning, but a more stable estimate of the state values.'''\n",
     "\n",
     "for steps in tqdm(range(500_000)):\n",
     "    trajectory = random_game()\n",
