Q-Learning implemented in lab10

--- a/CI - Lab/lab10/lab10.ipynb
+++ b/CI - Lab/lab10/lab10.ipynb
@@ -24,7 +24,75 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from itertools import combinations\n",
+    "from collections import namedtuple, defaultdict\n",
+    "from random import choice\n",
+    "from copy import deepcopy\n",
+    "\n",
+    "from tqdm.auto import tqdm\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "State = namedtuple('State', ['x', 'o'])\n",
+    "MAGIC = [2, 7, 6, 9, 5, 1, 4, 3, 8]\n",
+    "def print_board(pos):\n",
+    "    \"\"\"Nicely prints the board\"\"\"\n",
+    "    for r in range(3):\n",
+    "        for c in range(3):\n",
+    "            i = r * 3 + c\n",
+    "            if MAGIC[i] in pos.x:\n",
+    "                print('X', end='')\n",
+    "            elif MAGIC[i] in pos.o:\n",
+    "                print('O', end='')\n",
+    "            else:\n",
+    "                print('.', end='')\n",
+    "        print()\n",
+    "    print()\n",
+    "def win(elements):\n",
+    "    \"\"\"Checks is elements is winning\"\"\"\n",
+    "    return any(sum(c) == 15 for c in combinations(elements, 3))\n",
+    "\n",
+    "'''A reward is calculated for each state of each game. \n",
+    "The reward is calculated as the evaluation of the final state of the game. \n",
+    "In this case, the evaluation is done by the state_value() function, which returns a value between -1 and 1.'''\n",
+    "\n",
+    "def state_value(pos: State):\n",
+    "    \"\"\"Evaluate state: +1 first player wins\"\"\"\n",
+    "    if win(pos.x):\n",
+    "        return 1\n",
+    "    elif win(pos.o):\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return 0\n",
+    "    \n",
+    "    \n",
+    "def random_game():\n",
+    "    trajectory = list()\n",
+    "    state = State(set(), set())\n",
+    "    available = set(range(1, 9+1))\n",
+    "    while available:\n",
+    "        x = choice(list(available))\n",
+    "        state.x.add(x)\n",
+    "        trajectory.append(deepcopy(state))\n",
+    "        available.remove(x)\n",
+    "        if win(state.x) or not available:\n",
+    "            break\n",
+    "\n",
+    "        o = choice(list(available))\n",
+    "        state.o.add(o)\n",
+    "        trajectory.append(deepcopy(state))\n",
+    "        available.remove(o)\n",
+    "        if win(state.o):\n",
+    "            break\n",
+    "    return trajectory"
+   ]
   }
  ],
  "metadata": {
@@ -43,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
