--- a/CI - Lab/lab10/lab10.ipynb
+++ b/CI - Lab/lab10/lab10.ipynb
@@ -1,6 +1,24 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Copyright **`(c)`** 2023 Giovanni Squillero `<giovanni.squillero@polito.it>`  \n",
+        "[`https://github.com/squillero/computational-intelligence`](https://github.com/squillero/computational-intelligence)  \n",
+        "Free for personal or classroom use; see [`LICENSE.md`](https://github.com/squillero/computational-intelligence/blob/master/LICENSE.md) for details.  \n",
+        "\n",
+        "# LAB10\n",
+        "Use reinforcement learning to devise a tic-tac-toe player.\n",
+        "\n",
+        "## Deadlines:\n",
+        "Submission: Dies Natalis Solis Invicti\n",
+        "Reviews: Befana\n",
+        "Notes:\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
@@ -508,9 +526,9 @@
       "source": [
         "# This version below is just used by the already trained model to test the performances:\n",
         "Accuracy has been used as metric\n",
-        "- up to 95% if the my_Agent starts the game (on 1000 matches)\n",
-        "- up to 70% is the oppositor starts the game (on 1000 matches)\n",
-        "- up to 85% for randomic order (on 1000 matches)"
+        "- up to 95% if the my_Agent starts the game (on 100 matches)\n",
+        "- up to 70% is the oppositor starts the game (on 100 matches)\n",
+        "- up to 85% for randomic order (on 100 matches)"
       ]
     },
     {
