--- a/quixo/results.ipynb
+++ b/quixo/results.ipynb
@@ -2,11 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (tree.py, line 329)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "\u001b[0m  File \u001b[0;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:3553\u001b[0m in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
+      "\u001b[0m  Cell \u001b[0;32mIn[2], line 1\u001b[0m\n    from main import RandomPlayer, MonteCarloPlayer\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32mc:\\Users\\robit\\Documents\\GitHub\\Computational-Intelligence\\WithMarco2\\quixo\\main.py:7\u001b[1;36m\n\u001b[1;33m    from tree import MonteCarloTreeSearchNode\u001b[1;36m\n",
+      "\u001b[1;36m  File \u001b[1;32mc:\\Users\\robit\\Documents\\GitHub\\Computational-Intelligence\\WithMarco2\\quixo\\tree.py:329\u001b[1;36m\u001b[0m\n\u001b[1;33m    if reward != INF o -INF:\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "from main import RandomPlayer, MonteCarloPlayer\n",
+    "from main import RandomPlayer, MonteCarloPlayer, MonteCarloSPlayer\n",
     "from game import Game, Player\n",
     "from tqdm import tqdm\n",
     "import random\n",
@@ -19,40 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test avviato...\n",
-      "Numero simulazioni per rollout --> 100\n",
-      "C param per UCB equation --> 0.1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "MonteCarloTreeSearchNode.best_child() got an unexpected keyword argument 'c_param'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m players[\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m my_player_id] \u001b[38;5;241m=\u001b[39m RandomPlayer()\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# play the game\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m winner \u001b[38;5;241m=\u001b[39m \u001b[43mg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplay\u001b[49m\u001b[43m(\u001b[49m\u001b[43mplayers\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mplayers\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m winner \u001b[38;5;241m==\u001b[39m my_player_id:\n\u001b[0;32m     18\u001b[0m     wins \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "File \u001b[1;32mc:\\Users\\robit\\Documents\\GitHub\\Computational-Intelligence\\WithMarco2\\quixo\\game.py:100\u001b[0m, in \u001b[0;36mGame.play\u001b[1;34m(self, player1, player2)\u001b[0m\n\u001b[0;32m     98\u001b[0m ok \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m     99\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ok:\n\u001b[1;32m--> 100\u001b[0m     from_pos, slide \u001b[38;5;241m=\u001b[39m \u001b[43mplayers\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcurrent_player_idx\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmake_move\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    101\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m    102\u001b[0m     ok \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__move(from_pos, slide, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcurrent_player_idx)\n\u001b[0;32m    103\u001b[0m winner \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcheck_winner()\n",
-      "File \u001b[1;32mc:\\Users\\robit\\Documents\\GitHub\\Computational-Intelligence\\WithMarco2\\quixo\\main.py:33\u001b[0m, in \u001b[0;36mMonteCarloPlayer.make_move\u001b[1;34m(self, game)\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmake_move\u001b[39m(\u001b[38;5;28mself\u001b[39m, game: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGame\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mtuple\u001b[39m[\u001b[38;5;28mtuple\u001b[39m[\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28mint\u001b[39m], Move]:\n\u001b[0;32m     31\u001b[0m     \u001b[38;5;66;03m#print(f\"make_move -> my player id: {self.player_id}\")\u001b[39;00m\n\u001b[0;32m     32\u001b[0m     root \u001b[38;5;241m=\u001b[39m MonteCarloTreeSearchNode(Board(game\u001b[38;5;241m.\u001b[39mget_board()), player_id\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mplayer_id, d\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, root_player\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mplayer_id,\u001b[38;5;28mid\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m,num_simulations\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_simulations, c_param\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mc_param)\n\u001b[1;32m---> 33\u001b[0m     selected_node \u001b[38;5;241m=\u001b[39m \u001b[43mroot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbest_action\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     34\u001b[0m     from_pos, move \u001b[38;5;241m=\u001b[39m selected_node\u001b[38;5;241m.\u001b[39mget_action()\n\u001b[0;32m     35\u001b[0m     \u001b[38;5;66;03m#print('In make_move del nostro player -> Il nodo selezionato è il seguente: ', selected_node)\u001b[39;00m\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;66;03m#print(f\"In make_move del nostro player -> from_pos (col,row): {from_pos}, move: {move}\")\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\robit\\Documents\\GitHub\\Computational-Intelligence\\WithMarco2\\quixo\\tree.py:141\u001b[0m, in \u001b[0;36mMonteCarloTreeSearchNode.best_action\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    137\u001b[0m     v\u001b[38;5;241m.\u001b[39mbackpropagate(reward)\n\u001b[0;32m    139\u001b[0m \u001b[38;5;66;03m# non mi convince la scelta di mettere c_param = 0 quindi l'ho reso un iperparametro e provato a metterlo a 0.1\u001b[39;00m\n\u001b[0;32m    140\u001b[0m \u001b[38;5;66;03m# valutiamo la scelta di farlo variare nel tempo per favorire più l'exploration all'inizio e più la exploitation alla fine\u001b[39;00m\n\u001b[1;32m--> 141\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbest_child\u001b[49m\u001b[43m(\u001b[49m\u001b[43mc_param\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mc_param\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: MonteCarloTreeSearchNode.best_child() got an unexpected keyword argument 'c_param'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "players = np.empty(2, dtype=Player)\n",
     "for ns in NS:\n",
@@ -74,6 +56,73 @@
     "                wins += 1\n",
     "        acc  = 100*float(wins)/float(matches)\n",
     "        print(\"Accuracy: \", acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "def check_possible_win(state, player_id) -> bool:\n",
+    "    board = state\n",
+    "    key = player_id\n",
+    "    for r in range(0, 5):\n",
+    "        row = board[r, :]\n",
+    "        col = board[:, r]\n",
+    "        y = np.where(row == key)[0]\n",
+    "        z = np.where(col == key)[0]\n",
+    "        if (len(y) == 4):\n",
+    "            col_pos = np.argwhere(row != key)[0][0]\n",
+    "            if r != 0 and r != 4:\n",
+    "                if board[r-1, col_pos] == key:\n",
+    "                    if board[4, col_pos] == -1 or board[4, col_pos] == key:\n",
+    "                        return True\n",
+    "                elif board[r+1, col_pos] == key:\n",
+    "                    if board[0, col_pos] == -1 or board[0, col_pos] == key:\n",
+    "                        return True\n",
+    "            else:\n",
+    "                r_to_check = 4-r\n",
+    "                if board[r_to_check, col_pos] == key or board[r_to_check, col_pos] == -1:\n",
+    "                    return True\n",
+    "        if (len(z) == 4):\n",
+    "            row_pos = np.argwhere(col != key)[0][0]\n",
+    "            if r != 0 and r != 4:\n",
+    "                if board[row_pos, r-1] == key:\n",
+    "                    if board[row_pos, 4] == -1 or board[row_pos, 4] == key:\n",
+    "                        return True\n",
+    "                elif board[row_pos, r+1] == key:\n",
+    "                    if board[row_pos, 0] == -1 or board[row_pos, 0] == key:\n",
+    "                        return True\n",
+    "            else:\n",
+    "                r_to_check = 4-r\n",
+    "                if board[row_pos, r_to_check] == key or board[row_pos, r_to_check] == -1:\n",
+    "                    return True \n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "board = np.array([[0, 1, -1, 0, 1],\n",
+    "                  [1, 1, -1,-1,-1],\n",
+    "                  [0, 1,  1, 1, 1],\n",
+    "                  [-1,0,  1, 1, 0],\n",
+    "                  [0, 1,  1, 0, 0]])\n",
+    "print(check_possible_win(board, 1))"
    ]
   }
  ],
