MCTS-PNS with MR hybrid
MCTS-PNS con Minimax per il rollout come alternativa (basta impostare MR_hybrid = True nel main per attivare l'opzione).
Al momento però performa male

--- a/quixo/appunti/prove.ipynb
+++ b/quixo/appunti/prove.ipynb
@@ -17,20 +17,173 @@
     }
    ],
    "source": [
-    "from enum import Enum\n",
+    "import random\n",
+    "from typing import List\n",
+    "from game import Game\n",
+    "from other.context import Context\n",
+    "from other.move import Move\n",
+    "from main.collections import FastArrayList\n",
+    "from utils import AIUtils\n",
     "\n",
+    "class HybridMinimaxMCTS:\n",
+    "    MAX = 1\n",
+    "    MIN = -MAX\n",
+    "    NEUTRAL = (MIN + MAX) / 2\n",
     "\n",
-    "class Move(Enum):\n",
-    "    TOP = 0\n",
-    "    BOTTOM = 1\n",
-    "    LEFT = 2\n",
-    "    RIGHT = 3\n",
+    "    def __init__(self):\n",
+    "        self.player = -1\n",
+    "        self.game = None\n",
+    "        self.friendly_name = \"Hybrid Minimax-MCTS\"\n",
+    "        self.evaluation_playouts = 25\n",
+    "        self.max_playout_depth = 50\n",
+    "        self.reached_depths = []\n",
+    "        self.spent_times = []\n",
     "\n",
-    "    def compare(self, other):\n",
-    "        if self.value == other.value:\n",
-    "            return True\n",
-    "        return False\n",
-    "    \n"
+    "    def set_evaluation_playouts(self, evaluation_playouts):\n",
+    "        self.evaluation_playouts = evaluation_playouts\n",
+    "\n",
+    "    def set_max_playout_depth(self, max_playout_depth):\n",
+    "        self.max_playout_depth = max_playout_depth\n",
+    "\n",
+    "    def get_first_reached_depth(self):\n",
+    "        return self.reached_depths[0]\n",
+    "\n",
+    "    def get_mean_reached_depth(self):\n",
+    "        return sum(self.reached_depths) // len(self.reached_depths)\n",
+    "\n",
+    "    def get_mean_spent_time_seconds(self):\n",
+    "        spent_time_sum = sum(self.spent_times)\n",
+    "        return spent_time_sum / len(self.spent_times) / 1000.0\n",
+    "\n",
+    "    def select_action(self, game: Game, context: Context, max_seconds: float, max_iterations: int, max_depth: int) -> Move:\n",
+    "        legal_moves = game.moves(context).moves()\n",
+    "\n",
+    "        if not game.is_alternating_move_game():\n",
+    "            legal_moves = AIUtils.extract_moves_for_mover(legal_moves, self.player)\n",
+    "\n",
+    "        best_move = legal_moves[0]\n",
+    "        best_score = self.MIN\n",
+    "\n",
+    "        search_time_millis = int(max_seconds * 1000)\n",
+    "        start_time = AIUtils.current_time_millis()\n",
+    "        time_spent = 0\n",
+    "        iteration_time_spent = 0\n",
+    "        last_iteration_time_spent = 0\n",
+    "        depth = 0\n",
+    "\n",
+    "        while (time_spent + iteration_time_spent + (iteration_time_spent - last_iteration_time_spent)\n",
+    "                <= search_time_millis):\n",
+    "            last_iteration_time_spent = iteration_time_spent\n",
+    "            iteration_start_time = AIUtils.current_time_millis()\n",
+    "            best_move = legal_moves[0]\n",
+    "            best_score = self.MIN\n",
+    "\n",
+    "            for move in legal_moves:\n",
+    "                new_context = Context(context)\n",
+    "                new_context.game().apply(new_context, move)\n",
+    "                score = self.minimax(new_context, depth, self.MIN, self.MAX, False)\n",
+    "\n",
+    "                if score > best_score:\n",
+    "                    best_move = move\n",
+    "                    best_score = score\n",
+    "\n",
+    "            depth += 1\n",
+    "            iteration_time_spent = AIUtils.current_time_millis() - iteration_start_time\n",
+    "            time_spent = AIUtils.current_time_millis() - start_time\n",
+    "\n",
+    "        self.reached_depths.append(depth)\n",
+    "        self.spent_times.append(time_spent)\n",
+    "        return best_move\n",
+    "\n",
+    "    def minimax(self, context: Context, depth: int, alpha: float, beta: float, is_maximizing: bool) -> float:\n",
+    "        if depth == 0 or context.trial().over():\n",
+    "            return self.evaluate(context, is_maximizing)\n",
+    "\n",
+    "        legal_moves = self.game.moves(context).moves()\n",
+    "\n",
+    "        if not self.game.is_alternating_move_game():\n",
+    "            legal_moves = AIUtils.extract_moves_for_mover(legal_moves, self.player)\n",
+    "\n",
+    "        if is_maximizing:\n",
+    "            max_value = self.MIN\n",
+    "\n",
+    "            for move in legal_moves:\n",
+    "                new_context = Context(context)\n",
+    "                new_context.game().apply(new_context, move)\n",
+    "                new_value = self.minimax(new_context, depth - 1, alpha, beta, False)\n",
+    "                max_value = max(max_value, new_value)\n",
+    "\n",
+    "                if max_value >= beta:\n",
+    "                    break\n",
+    "\n",
+    "                alpha = max(alpha, max_value)\n",
+    "\n",
+    "            return max_value\n",
+    "        else:\n",
+    "            min_value = self.MAX\n",
+    "\n",
+    "            for move in legal_moves:\n",
+    "                new_context = Context(context)\n",
+    "                new_context.game().apply(new_context, move)\n",
+    "                new_value = self.minimax(new_context, depth - 1, alpha, beta, True)\n",
+    "                min_value = min(min_value, new_value)\n",
+    "\n",
+    "                if min_value <= alpha:\n",
+    "                    break\n",
+    "\n",
+    "                beta = min(beta, min_value)\n",
+    "\n",
+    "            return min_value\n",
+    "\n",
+    "    def evaluate(self, context: Context, is_maximizing: bool) -> float:\n",
+    "        if context.trial().over():\n",
+    "            return self.evaluate_terminal_state(context)\n",
+    "\n",
+    "        starting_player = self.player if is_maximizing else 1 - self.player\n",
+    "        return self.evaluate_with_playouts(context, starting_player)\n",
+    "\n",
+    "    def evaluate_terminal_state(self, context: Context) -> float:\n",
+    "        if self.player in context.winners():\n",
+    "            return self.MAX\n",
+    "        elif not context.winners():\n",
+    "            return self.NEUTRAL\n",
+    "        else:\n",
+    "            return self.MIN\n",
+    "\n",
+    "    def evaluate_with_playouts(self, context: Context, starting_player: int) -> float:\n",
+    "        evaluation = 0.0\n",
+    "\n",
+    "        for _ in range(self.evaluation_playouts):\n",
+    "            evaluation += self.make_playout(context, starting_player)\n",
+    "\n",
+    "        return evaluation / self.evaluation_playouts\n",
+    "\n",
+    "    def make_playout(self, context: Context, starting_player: int) -> float:\n",
+    "        new_context = Context(context)\n",
+    "        current_player = starting_player\n",
+    "        depth = 0\n",
+    "\n",
+    "        while not new_context.trial().over() and depth < self.max_playout_depth:\n",
+    "            move = self.get_random_move(new_context, current_player)\n",
+    "            new_context.game().apply(new_context, move)\n",
+    "            current_player = 1 - current_player\n",
+    "            depth += 1\n",
+    "\n",
+    "        return self.evaluate_terminal_state(new_context)\n",
+    "\n",
+    "    def get_random_move(self, context: Context, player: int) -> Move:\n",
+    "        legal_moves = self.game.moves(context).moves()\n",
+    "\n",
+    "        if not self.game.is_alternating_move_game():\n",
+    "            legal_moves = AIUtils.extract_moves_for_mover(legal_moves, player)\n",
+    "\n",
+    "        return random.choice(legal_moves)\n",
+    "\n",
+    "    def init_ai(self, game: Game, player_id: int):\n",
+    "        self.game = game\n",
+    "        self.player = player_id\n",
+    "        self.reached_depths.clear()\n",
+    "        self.spent_times.clear()\n"
    ]
   }
  ],
